# kailux

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  build.bat  build.sh  conanfile.py
app/: CMakeLists.txt
app/src/: Application.cpp  Application.h  main.cpp
app/src/core/: Application.cpp  Application.h
assets/ini/: imgui.ini
editor/: CMakeLists.txt
editor/src/: Editor.cpp  Editor.h  main.cpp
editor/src/core/: Editor.cpp  Editor.h
editor/src/core/layers/: EditorLayer.cpp  EditorLayer.h  Layer.h
editor/src/core/panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  EntityEditorPanel.cpp  EntityEditorPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  MenuPanel.cpp  MenuPanel.h  Panel.cpp  Panel.h  ProjectPanel.cpp  ProjectPanel.h  ViewportPanel.cpp  ViewportPanel.h
editor/src/core/panels/project_panel/: AssetBrowser.cpp  AssetBrowser.h  Console.cpp  Console.h  ProjectPanel.cpp  ProjectPanel.h
editor/src/layers/: EditorLayer.cpp  EditorLayer.h  Layer.cpp  Layer.h
editor/src/panels/: EntityEditorPanel.cpp  EntityEditorPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  MenuPanel.cpp  MenuPanel.h
engine/: CMakeLists.txt
engine/src/core/: AssetPipeline.cpp  AssetPipeline.h  Camera.cpp  Camera.h  Clock.cpp  Clock.h  CommandRecorder.cpp  CommandRecorder.h  ComputePicker.h  Context.cpp  Context.h  Core.h  DeferredResourceEraser.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Engine.cpp  Engine.h  FileDialog.cpp  FileDialog.h  FrameData.cpp  FrameData.h  Geometry.cpp  Geometry.h  Log.h  Logger.h  OneTimeCommand.h  Pipeline.cpp  Pipeline.h  Scene.cpp  Scene.h  SkyboxPass.cpp  SkyboxPass.h  SwapChain.cpp  SwapChain.h  Swapchain.cpp  Swapchain.h  TransferManager.cpp  TransferManager.h  Window.cpp  Window.h
engine/src/core/buffer/: Buffer.cpp  Buffer.h  BufferAllocator.cpp  BufferAllocator.h
engine/src/core/command/: CommandRecorder.cpp  CommandRecorder.h  OneTimeCommand.cpp  OneTimeCommand.h
engine/src/core/components/: CameraComponent.h
engine/src/core/components/entt/: CachedPhysicsData.h  CameraComponent.h  GizmoComponent.h  HierarchyComponent.h  MaterialComponent.h  MeshComponent.h  PendingUploadComponent.h  PhysicsComponent.h  PhysicsControlComponent.h  TagComponent.h
engine/src/core/components/gpu/: CameraData.h  DirectionalLightData.h  LightsData.h  MaterialSlot.h  MeshData.h  MeshMaterialData.h  MeshTransformData.h  PointLightData.h  SceneData.h  TransformComponent.h
engine/src/core/descriptor/: DescriptorLayout.cpp  DescriptorLayout.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h
engine/src/core/gizmo/: GizmoGeometry.cpp  GizmoGeometry.h  GizmoRegistry.cpp  GizmoRegistry.h  GizmoVertex.h
engine/src/core/imgui_backend/: ImGuiBackend.cpp  ImGuiBackend.h
engine/src/core/mesh/: MeshGeometry.cpp  MeshGeometry.h  MeshLoader.cpp  MeshLoader.h  MeshRegistry.cpp  MeshRegistry.h  Vertex.h
engine/src/core/passes/: ComputeCuller.cpp  ComputeCuller.h  ComputePass.cpp  ComputePass.h  ComputePassesPushConstants.h  ComputePicker.cpp  ComputePicker.h  GizmoPass.cpp  GizmoPass.h  GraphicsPass.cpp  GraphicsPass.h  GraphicsPassesPushConstants.h  MainPass.cpp  MainPass.h  OutlinePass.cpp  OutlinePass.h  SkyboxPass.cpp  SkyboxPass.h
engine/src/core/physics/: PhysicsRegistry.cpp  PhysicsRegistry.h  PhysicsSystem.cpp  PhysicsSystem.h
engine/src/core/physics/impl/: BroadPhaseLayer.cpp  BroadPhaseLayer.h  Layers.h  ObjectLayerPairFilter.cpp  ObjectLayerPairFilter.h  ObjectVsBroadPhaseLayerFilter.cpp  ObjectVsBroadPhaseLayerFilter.h
engine/src/core/shaders/: base_fragment_shader.glsl  compile_shaders.py  cull_compute_shader.glsl  entity_picker_compute_shader.glsl  fragment_shader.glsl  gizmo_fragment_shader.glsl  gizmo_vertex_shader.glsl  include_shader.py  outline_fragment_shader.glsl  outline_vertex_shader.glsl  skybox_fragment_shader.glsl  skybox_vertex_shader.glsl  vertex_shader.glsl
engine/src/core/shaders/include/: pbr.glsl
engine/src/core/texture/: ImageLoader.cpp  ImageLoader.h  Texture.cpp  Texture.h  TextureAllocator.cpp  TextureAllocator.h  TextureRegistry.cpp  TextureRegistry.h
engine/src/core/utilities/: LinearZone.cpp  LinearZone.h  Queue.h  ThreadDispatcher.cpp  ThreadDispatcher.h
engine/src/core/window/: Event.cpp  Event.h  Window.cpp  Window.h
scripts/: linux_build.sh  windows_build.bat
scripts/imguizmo/: conanfile.py
